package interfaces

type CPUPlayer interface {
	// Decide(game) ActionCommand
}